2003-05-12  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_mine_draw): Added a dotted line to the
	background grid to increase contrast. Amusingly high-contrast was
	the worst case with the old line-style. See bug #97732. Thanks go
	to Feiyun Wang for suggesting the solution and to Jonathan
	Blandford who suggested using a stipple.

2003-05-07  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (fix_nmines): Added code to ensure that the number of
	mines is never greater than the number of cells. Fixes bug #97229.

	* Makefile.am (install-data-local): Update the names of any old
	high score files. High scores should work again.

	* gnomine.c: Added dodgy code to ensure that the window doesn't
	shrink when it looses focus and displays the "press here" message.
	Fixes bug #83317.

2003-04-30  Abel Cheung  <maddog@linux.org.hk>

	* ChangeLog: Convert to UTF-8.

2003-03-10  Ross Burton  <ross@burtonini.com>

	* flag.png, flag-question.png, mine.png: New icons from Jimmac.

	* flag-*.(gif|xpm): Removed, replaced by above.

	* minefield.c: Open the field PNGs instead of embedding XPMs.

	* Makefile.am: Install the new images.

2002-12-17  Ross Burton  <ross@burtonini.com>

	* Makefile.am (schema_in_files): Fix the schema path.

2002-12-11  Ross Burton  <ross@burtonini.com>

	* minefield.c: Small changes to try and draw the labels at a
	sensible size. Closes #100796.

2002-11-29  Ross Burton  <ross@burtonini.com>

	* Makefile.am (EXTRA_DIST): Put the source of the schemas in the
	dist, not the generated files.

2002-11-25  Ross Burton  <ross@burtonini.com>

	* Makefile.am: Fixed the GConf install location, thanks to Loz
	<gnome2@flower.powernet.co.uk>. Closes #99393.

2002-11-18  Fernando Herrera <fherrera@onirica.com>

	* gnomine.desktop.in: add X-GNOME-BUGZILLA stuff

2002-10-16  Ross Burton  <ross@burtonini.com>

	* gnomine.c: Re-write of the Preferences code. It's now instant
	apply, has a clearer interface, etc etc. Closes #94873.